Pricing and website updates - September 2023

--- a/consulting.html
+++ b/consulting.html
@@ -56,10 +56,6 @@
                         Services
                     </a>
 
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
-                        Products
-                    </a>
-
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/portfolio.html">
                         Portfolio
                     </a>
@@ -151,11 +147,9 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$90 per hour</b></h2>
+                                    <h2><b>$75 per hour</b></h2>
                                     <h3>Website services include: SEO consulting, CMS consulting, website add-ons or assistance with a deployed website, custom coding and scripts, and social media marketing.</h3>
-                                    <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3>
-                                    <h3>Large projects will be priced per project.</h3>
-                                    <h3>Small projects will be priced per hour.</h3><br>
+                                    <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -163,13 +157,6 @@
                             </div>
                         </div>
                     </div>
-                </div><hr>
-
-                <p></p>
-                <h1 class="title">
-                    Missionary Pricing
-                </h1>
-                <div class="columns">
                     <div class="column">
                         <p></p>
                         <div class="card">
@@ -183,9 +170,7 @@
                                 <div class="content">
                                     <h2><b>$50 per hour</b></h2>
                                     <h3>Website services include: SEO consulting, CMS consulting, website add-ons or assistance with a deployed website, custom coding and scripts, and social media marketing.</h3>
-                                    <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3>
-                                    <h3>Large projects will be priced per project.</h3>
-                                    <h3>Small projects will be priced per hour.</h3><br>
+                                    <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
