--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -56,10 +56,6 @@
                         Services
                     </a>
 
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
-                        Products
-                    </a>
-
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/portfolio.html">
                         Portfolio
                     </a>
@@ -151,14 +147,14 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$500 per page</b></h2>
+                                    <h2><b>$3500 per app</b></h2>
                                     <h2 class="h2-price"><b>$150 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
+                                    <h3><b>Payment plans available!</b></h3>
                                     <h3>Development for custom mobile app</h3>
                                     <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
                                     <h3>Minimum of 3 pages</h3>
-                                    <h3>No page maximum!</h3>
                                     <h3>No limit for feature integrations!</h3>
                                     <h3>Live updates for quicker customizations!</h3>
                                     <h3>Custom branding and push notifications</h3>
@@ -170,27 +166,21 @@
                             </div>
                         </div>
                     </div>
-                </div><hr>
-
-                <p></p>
-                <h1 class="title">
-                    Missionary Pricing
-                </h1>
-                <div class="columns">
                     <div class="column">
                         <p></p>
                         <div class="card">
                             <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-brackets-curly"></i>&nbsp;
-                                    Mobile App Development
+                                    Missionary App Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$500 per app</b></h2>
-                                    <h2 class="h2-price"><b>$50 per month</b></h2>
+                                    <h2><b>$1000 per app</b></h2>
+                                    <h2 class="h2-price"><b>$100 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
+                                    <h3><b>Payment plans available!</b></h3>
                                     <h3>Development for custom mobile app</h3>
                                     <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
