--- a/website-development.html
+++ b/website-development.html
@@ -56,10 +56,6 @@
                         Services
                     </a>
 
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
-                        Products
-                    </a>
-
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/portfolio.html">
                         Portfolio
                     </a>
@@ -149,11 +145,12 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$250 per page</b></h2>
-                                    <h2 class="h2-price"><b>$90 per month</b></h2>
+                                    <h2><b>$2500 per website</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
-                                    <h3>No page minimum or maximum!</h3><br>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
+                                    <h3>Ideal for a church or ministry website with up to ten pages!</h3>
+                                    <h3><b>$100 per page for every page over ten pages.</b></h3>
+                                    <h3><b>Additional website updates after deployment will be billed at hourly consulting rate</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -167,66 +164,16 @@
                             <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-code"></i>&nbsp;
-                                    One-Time Development
+                                    Missionary Website Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$250 per page</b></h2>
+                                    <h2><b>$1000 per website</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
                                     <h3>No page minimum or maximum!</h3>
-                                    <h3><b>Additional consulting after deployment will be billed at hourly consulting rate</b></h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><hr>
-                <h1 class="title">
-                    Missionary Pricing
-                </h1>
-                <div class="columns">
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-code"></i>&nbsp;
-                                    Website Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$500 per website</b></h2>
-                                    <h2 class="h2-price"><b>$50 per month</b></h2>
-                                    <h3><b>Hosting fees included for one year</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
-                                    <h3>No page minimum or maximum!</h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header-brick">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-code"></i>&nbsp;
-                                    One-Time Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$500 per website</b></h2>
-                                    <h3><b>Hosting fees included for one year</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup</b></h3>
-                                    <h3>No page minimum or maximum!</h3>
-                                    <h3><b>Additional consulting after deployment will be billed at hourly consulting rate</b></h3><br>
+                                    <h3><b>Unlimited FREE updates!</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
