--- a/consulting.html
+++ b/consulting.html
@@ -163,7 +163,7 @@
                             <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-computer"></i>&nbsp;
-                                    Website & IT Consulting
+                                    Missionary Website & IT Consulting
                                 </p>
                             </header>
                             <div class="card-content">
