Added Kayla's site to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -204,6 +204,21 @@
                     </div><br>
                     <div class="column">
                         <h2 class="subtitle">
+                            <b><u><a href="https://fbcrice.org" target="_blank">Trevor & Kayla Wedding Site</a></u></b> 
+                        </h2>
+                        <a href="https://trevorandkayla.com" target="_blank">
+                            <picture>
+                                <source srcset="./images/kayla.webp" type="images/webp">
+                                <source srcset="./images/kayla.png" type="images/png">
+                                <img class="home-image border" src="./images/kayla.webp" width="640" height="480" alt="Kayla and Trevor Wedding Website">
+                            </picture>
+                        </a>
+                    </div>
+                </div><br>
+
+                <div class="columns">
+                    <div class="column">
+                        <h2 class="subtitle">
                             <b>Red Oak Tire & Wheel, Inc.</b>
                         </h2>
                         <picture>
@@ -211,7 +226,9 @@
                             <source srcset="./images/rotw.png" type="images/png">
                             <img class="home-image border" src="./images/rotw.png" width="640" height="480" alt="Red Oak Tire & Wheel, Inc. Website">
                         </picture>
-                    </div>
+                    </div><br>
+                    <div class="column"></div>
+                    <div class="column"></div>
                 </div><hr>
                 
                 <h1 class="title">
