Updated website page

--- a/website-development.html
+++ b/website-development.html
@@ -173,7 +173,7 @@
                                     <h3><b>Hosting fees included for one year</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
                                     <h3>No page minimum or maximum!</h3>
-                                    <h3><b>Unlimited FREE updates!</b></h3><br>
+                                    <h3><b>Unlimited FREE updates for as long as you are serving as a missionary!</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
