--- a/website-development.html
+++ b/website-development.html
@@ -145,12 +145,10 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$3500 per website</b></h2>
+                                    <h2><b>$350 per page</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
-                                    <h3>Ideal for a church or ministry website with up to ten pages!</h3>
-                                    <h3><b>$150 per page for every page over ten pages.</b></h3>
-                                    <h3><b>Additional website updates after deployment will be billed at hourly consulting rate</b></h3><br>
+                                    <h3><b>Website updates after deployment will be billed at hourly consulting rate</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
