--- a/website-development.html
+++ b/website-development.html
@@ -148,6 +148,7 @@
                                     <h2><b>$350 per page</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
                                     <h3><b>Website updates after deployment will be billed at hourly consulting rate</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
