--- a/portfolio.html
+++ b/portfolio.html
@@ -219,6 +219,18 @@
                 <div class="columns">
                     <div class="column">
                         <h2 class="subtitle">
+                            <b><u><a href="https://owensphd.com" target="_blank">Intercultural Studies PhD Website</a></u></b>
+                        </h2>
+                        <a href="https://owensphd.com" target="_blank">
+                            <picture>
+                                <source srcset="./images/phd.webp" type="images/webp">
+                                <source srcset="./images/phd.png" type="images/png">
+                                <img class="home-image border" src="./images/phd.png" width="640" height="480" alt="Intercultural Studies PhD Website">
+                            </picture>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <h2 class="subtitle">
                             <b>Red Oak Tire & Wheel, Inc.</b>
                         </h2>
                         <picture>
@@ -227,7 +239,6 @@
                             <img class="home-image border" src="./images/rotw.png" width="640" height="480" alt="Red Oak Tire & Wheel, Inc. Website">
                         </picture>
                     </div><br>
-                    <div class="column"></div>
                     <div class="column"></div>
                 </div><hr>
                 
