FIxed pricing issues

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -178,7 +178,6 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$1000 per app</b></h2>
-                                    <h2 class="h2-price"><b>$100 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
                                     <h3><b>Payment plans available!</b></h3>
                                     <h3>Development for custom mobile app</h3>
@@ -186,6 +185,7 @@
                                     <h3>Option for tab and/or side menu navigation</h3>
                                     <h3>No page limit!</h3>
                                     <h3>No limit for feature integrations!</h3>
+                                    <h3>Live updates for quicker customizations!</h3>
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited FREE updates for as long as you are serving as a missionary!</h3><br>
                                     <div class="buttons is-centered">
