Changed pricing structure

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -142,13 +142,13 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-brackets-curly"></i>&nbsp;
-                                    Mobile App Development
+                                    Church Mobile App Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$4000 per app</b></h2>
-                                    <h2 class="h2-price"><b>$200 per month</b></h2>
+                                    <h2><b>$1500 per app</b></h2>
+                                    <h2 class="h2-price"><b>$150 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
                                     <h3><b>Payment plans available!</b></h3>
                                     <h3>Development for custom mobile app</h3>
@@ -166,6 +166,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="column">
                         <p></p>
                         <div class="card">
@@ -195,6 +196,38 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="column">
+                        <p></p>
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-brackets-curly"></i>&nbsp;
+                                    Organization Mobile App Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$2500 per app</b></h2>
+                                    <h2 class="h2-price"><b>$250 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>Payment plans available!</b></h3>
+                                    <h3>Development for custom mobile app</h3>
+                                    <h3>Deployment to both the Apple and Google app stores</h3>
+                                    <h3>Option for tab and/or side menu navigation</h3>
+                                    <h3>Minimum of 3 pages</h3>
+                                    <h3>No limit for feature integrations!</h3>
+                                    <h3>Live updates for quicker customizations!</h3>
+                                    <h3>Custom branding and push notifications</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
