--- a/website-development.html
+++ b/website-development.html
@@ -140,16 +140,16 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-code"></i>&nbsp;
-                                    Website Development
+                                    Church Website Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$400 per page</b></h2>
+                                    <h2><b>$150 per page</b></h2>
+                                    <h2 class="h2-price"><b>$50 per month</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
-                                    <h3>Five pages minimum. No page maximum!</h3>
-                                    <h3><b>Website updates after deployment will be billed at hourly consulting rate</b></h3><br>
+                                    <h3>Five pages minimum. No page maximum!</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -180,6 +180,30 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Organization Website Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$250 per page</b></h2>
+                                    <h2 class="h2-price"><b>$90 per month</b></h2>
+                                    <h3><b>Hosting fees included for one year</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain and Hosting Setup</b></h3>
+                                    <h3>Five pages minimum. No page maximum!</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>   
         </section>
