Updated Consulting page

--- a/consulting.html
+++ b/consulting.html
@@ -142,13 +142,14 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-computer"></i>&nbsp;
-                                    Website & IT Consulting
+                                    Software, Website, & IT Consulting
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$100 per hour</b></h2>
                                     <h3>Website services include: SEO consulting, CMS consulting, website add-ons or assistance with a deployed website, custom coding and scripts, and social media marketing.</h3>
+                                    <h3>Software services include: development, testing, and deployment of custom software solutions.</h3>
                                     <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
@@ -163,13 +164,14 @@
                             <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-computer"></i>&nbsp;
-                                    Missionary Website & IT Consulting
+                                    Missionary Software, Website & IT Consulting
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$50 per hour</b></h2>
                                     <h3>Website services include: SEO consulting, CMS consulting, website add-ons or assistance with a deployed website, custom coding and scripts, and social media marketing.</h3>
+                                    <h3>Software services include: development, testing, and deployment of custom software solutions.</h3>
                                     <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
