Removed apps from portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,7 @@
                     <div class="column"></div>
                 </div><hr>
                 
-                <h1 class="title">
+                <!-- <h1 class="title">
                     Porfolio of Mobile Apps
                 </h1>
                 <p></p>
@@ -307,7 +307,7 @@
                             </picture>
                         </a>
                     </div>
-                </div> 
+                </div>  -->
             </div>
         </section>
 
