--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -186,7 +186,7 @@
                                     <h3>No limit for feature integrations!</h3>
                                     <h3>Live updates for quicker customizations!</h3>
                                     <h3>Custom branding and push notifications</h3>
-                                    <h3>Unlimited FREE updates for as long as you are serving as a missionary!</h3><br>
+                                    <h3>Unlimited FREE updates for as long as you are serving as a BMA missionary!</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
