--- a/portfolio.html
+++ b/portfolio.html
@@ -163,6 +163,9 @@
                             </picture>
                         </a>
                     </div><br>
+                </div><hr>
+
+                <div class="columns">
                     <div class="column">
                         <h2 class="subtitle">
                             <b><u><a href="https://baptistprogress.org" target="_blank">Baptist Progress</a></u></b>
@@ -175,9 +178,6 @@
                             </picture>
                         </a>
                     </div><br>
-                </div><br>
-
-                <div class="columns">
                     <div class="column">
                         <h2 class="subtitle">
                             <b><u><a href="https://fbcrice.org" target="_blank">First Baptist Church, Rice</a></u></b> 
@@ -190,6 +190,9 @@
                             </picture>
                         </a>
                     </div><br>
+                </div><hr>
+
+                <div class="columns">
                     <div class="column">
                         <h2 class="subtitle">
                             <b><u><a href="https://bmla.org" target="_blank">Baptist Missionary Loan Association</a></u></b>
@@ -204,9 +207,8 @@
                     </div><br>
                     <div class="column">
                         <h2 class="subtitle">
-                            <b><u><a href="https://fbcrice.org" target="_blank">Trevor & Kayla Wedding Site</a></u></b> 
+                            <b>Trevor & Kayla Wedding Site</b> 
                         </h2>
-                        <a href="https://trevorandkayla.com" target="_blank">
                             <picture>
                                 <source srcset="./images/kayla.webp" type="images/webp">
                                 <source srcset="./images/kayla.png" type="images/png">
@@ -214,14 +216,13 @@
                             </picture>
                         </a>
                     </div>
-                </div><br>
+                </div><hr>
 
                 <div class="columns">
                     <div class="column">
                         <h2 class="subtitle">
-                            <b><u><a href="https://owensphd.com" target="_blank">Intercultural Studies PhD Website</a></u></b>
+                            <b>Intercultural Studies PhD Website</b>
                         </h2>
-                        <a href="https://owensphd.com" target="_blank">
                             <picture>
                                 <source srcset="./images/phd.webp" type="images/webp">
                                 <source srcset="./images/phd.png" type="images/png">
@@ -237,6 +238,32 @@
                             <source srcset="./images/rotw.webp" type="images/webp">
                             <source srcset="./images/rotw.png" type="images/png">
                             <img class="home-image border" src="./images/rotw.png" width="640" height="480" alt="Red Oak Tire & Wheel, Inc. Website">
+                        </picture>
+                    </div><br>
+                </div><hr>
+
+                <div class="columns">
+                    <div class="column">
+                        <h2 class="subtitle">
+                            <b><u><a href="https://tundrabc.com" target="_blank">Tundra Baptist Church</a></u></b>
+                        </h2>
+                        <a href="https://tundrabc.com" target="_blank">
+                            <picture>
+                                <source srcset="./images/tundra.webp" type="images/webp">
+                                <source srcset="./images/tundra.png" type="images/png">
+                                <img class="home-image border" src="./images/tundra.png" width="640" height="480" alt="Tundra Baptist Church Website">
+                            </picture>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <h2 class="subtitle">
+                            <b><u><a href="https://littlefieldchamber.com" target="_blank">Littlefield Chamber of Commerce</a></u></b>
+                        </h2>
+                        <a href="https://littlefieldchamber.com" target="_blank">
+                        <picture>
+                            <source srcset="./images/littlefieldcoc.webp" type="images/webp">
+                            <source srcset="./images/littlefieldcoc.png" type="images/png">
+                            <img class="home-image border" src="./images/littlefieldcoc.png" width="640" height="480" alt="Littlefield Chamber of Commerce Website">
                         </picture>
                     </div><br>
                     <div class="column"></div>
