Updated family pic

--- a/about.html
+++ b/about.html
@@ -146,9 +146,9 @@
                             <div class="card-image">
                                 <figure class="image is-5by4">
                                     <picture>
-                                        <source srcset="./images/pic.webp" type="images/webp">
-                                        <source srcset="./images/pic.jpg" type="images/jpeg">
-                                        <img src="./images/pic.webp" alt="Justin Owens family" width="640" height="420">
+                                        <source srcset="./images/familypic2024.webp" type="images/webp">
+                                        <source srcset="./images/familypic2024.jpg" type="images/jpeg">
+                                        <img src="./images/familypic2024.webp" alt="Justin Owens family" width="640" height="420">
                                     </picture>
                                 </figure>
                             </div> 
