--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am a graduate with a degree in information technology and am passionate about designing quality custom mobile apps, developing custom user-friendly websites, and providing website and IT consulting services all for the glory of God!
+                    My name is Dr. Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am a graduate with a degree in information technology and am passionate about designing quality custom mobile apps, developing custom user-friendly websites, and providing website and IT consulting services all for the glory of God!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
